SFDC Automation/src/objects/RSM_VehicleValidationDetails__c.object
<CustomObject>
    <fields>
        <fullName>External_Key__c</fullName>
        <externalId>true</externalId>
        <label>External Key</label>
        <length>61</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LesseeName__c</fullName>
        <label>LesseeName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LesseeNumber__c</fullName>
        <label>LesseeNumber</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Description__c</fullName>
        <label>Rule Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <label>Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <label>Unit Number</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>RSM VehicleValidationDetails</relationshipLabel>
        <relationshipName>RSM_VehicleValidationDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Validation_Rule_Id__c</fullName>
        <label>Validation Rule Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>RSM VehicleValidationDetails</label>
    <nameField>
        <label>VehicleValidationDetailsId</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RSM VehicleValidationDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>